--- a/basics/exercise/index.html
+++ b/basics/exercise/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Soon to be a Three.js Website</h1>
+    <canvas class='webgl'></canvas>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
